@@ -106,7 +106,6 @@ export(is_shallow)
 export(is_tree)
 export(last_commit)
 export(libgit2_features)
-export(libgit2_sha)
 export(libgit2_version)
 export(lookup)
 export(ls_tree)
